--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -2,40 +2,57 @@
 
 {% block title %}User index{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>User index</h1>
+<div class="box_pages">
+  <h6>VEGGIZ</h6>
+    <h3>User index</h1>
+<div class="container">
+  <table class="table">
+      <thead class="entete">
+          <tr>
+              <th>Id</th>
+              <th>Email</th>
+              <th>Roles</th>
+              {# <th>Password</th> #}
+              <th>Pseudo</th>
+              <th>Actions</th>
+          </tr>
+      </thead>
+      <tbody>
+      {% for user in users %}
+          <tr>
+              <td>{{ user.id }}</td>
+              <td>{{ user.email }}</td>
+              <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+              {# <td>{{ user.password }}</td> #}
+              <td>{{ user.pseudo }}</td>
+              <td>
+                  <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
+                  <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+              </td>
+          </tr>
+      {% else %}
+          <tr>
+              <td colspan="6">no records found</td>
+          </tr>
+      {% endfor %}
+      </tbody>
+  </table>
+  <br>
+  <div class="container boutons_discussion">
+      <a class="btn btn-primary bouton_admin" href="{{ path('user_new') }}">Create new</a>
+  </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>Pseudo</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.pseudo }}</td>
-                <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+</div>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+</div>
+
 {% endblock %}
