--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -2,37 +2,53 @@
 
 {% block title %}User{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>User</h1>
+<div class="box_pages">
+  <h6>VEGGIZ</h6>
+    <h3>User</h3>
+<div class="container">
+<table class="table">
+    <tbody>
+        <tr>
+            <th>Id</th>
+            <td>{{ user.id }}</td>
+        </tr>
+        <tr>
+            <th>Email</th>
+            <td>{{ user.email }}</td>
+        </tr>
+        <tr>
+            <th>Roles</th>
+            <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+        </tr>
+        <tr>
+            <th>Password</th>
+            <td>{{ user.password }}</td>
+        </tr>
+        <tr>
+            <th>Pseudo</th>
+            <td>{{ user.pseudo }}</td>
+        </tr>
+    </tbody>
+</table>
+<div class="container boutons_discussion">
+  <a class="btn btn-primary bouton_retour" href="{{ path('user_index') }}">back to list</a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>Pseudo</th>
-                <td>{{ user.pseudo }}</td>
-            </tr>
-        </tbody>
-    </table>
+  <a class="btn btn-primary bouton_retour" href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+  <a class="btn btn-primary bouton_admin">{{ include('user/_delete_form.html.twig') }}</a>
+</div>
 
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+</div>
 
-    {{ include('user/_delete_form.html.twig') }}
+</div>
+
 {% endblock %}
