--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,82 +84,82 @@
 
         <div class="row">
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+            <img src="img/apricot.png" label="icone-banane" class="fruits">
+            <h4>Abricot</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+            <img src="img/artichoke.png" label="icone-banane" class="fruits">
+            <h4>Artichau</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+            <img src="img/fig.png" label="icone-banane" class="fruits">
+            <h4>Figue</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+            <img src="img/melon.png" label="icone-banane" class="fruits">
+            <h4>melon</h4>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+            <img src="img/paprika.png" label="icone-banane" class="fruits">
+            <h4>Poivron</h4>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+            <img src="img/strawberry.png" label="icone-banane" class="fruits">
+            <h4>Fraise</h4>
           </div>
 
         <div class"w-100"> </div>
 
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+          <img src="img/spinach.png" label="icone-banane" class="fruits">
+          <h4>Epinard</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+          <img src="img/tomato.png" label="icone-banane" class="fruits">
+          <h4>tomate</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+            <img src="img/lemon.png" label="icone-banane" class="fruits">
+            <h4>citron</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
-            <h4>Banane</h4>
-            <img src="img/#.png" label="icone-banane">
+            <img src="img/asparagus.png" label="icone-banane" class="fruits">
+              <h4>Asperge</h4>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+            <img src="img/watermelon.png" label="icone-banane" class="fruits">
+                <h4>Pasteque</h4>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+            <img src="img/carrot.png" label="icone-banane" class="fruits">
+            <h4>Carrot</h4>
           </div>
 
         <div class"w-100"> </div>
 
         <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
-          <h4>Banane</h4>
-          <img src="img/#.png" label="icone-banane">
+        <img src="img/onion.png" label="icone-banane"class="fruits">
+          <h4>Oignon</h4>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
-          <h4>Banane</h4>
-          <img src="img/#.png" label="icone-banane">
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
-          <h4>Banane</h4>
-          <img src="img/#.png" label="icone-banane">
+          <img src="img/cherries.png" label="icone-banane"class="fruits">
+            <h4>Cerise</h4>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
-          <h4>Banane</h4>
-          <img src="img/.png" label="icone-orange">
+          <img src="img/zucchini.png" label="icone-banane"class="fruits">
+          <h4>Courgette</h4>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
-          <h4>Banane</h4>
-          <img src="img/#.png" label="icone-banane">
+          <img src="img/radish.png" label="icone-orange"class="fruits">
+        <h4>Radis</h4>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
-          <h4>Banane</h4>
-          <img src="img/#.png" label="icone-banane">
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+          <img src="img/broccoli.png" label="icone-banane"class="fruits">
+          <h4>broccoli</h4>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+          <img src="img/raspberries.png" label="icone-banane"class="fruits">
+          <h4>Franboise</h4>
         </div>
         </div>
 
@@ -188,42 +188,76 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-          <div class="fond">
-            <img class="d-block w-100" src="{{ asset('img/Desert.jpg')}}" alt="First slide">
-            </div>
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Septembre</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/koala.jpg')}}" alt="Second slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Octobre</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/Tulips.jpg')}}" alt="Third slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Novembre</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Fourth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Fourth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Decembre</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Fifth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Fifth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Janvier</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Sixth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Sixth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Fevrier</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Seventh slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Seventh slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Mars</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Eighth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Eighth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Avril</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Nineth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Nineth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Mai</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="tenth slide">
+            <img class="d-block w-100" ssrc="{{ asset('img/slide-juin.gif')}}" alt="tenth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Juin</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Eleventh slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Eleventh slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Juillet</h5>
+           </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Twelfth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Twelfth slide">
+            <div class="carousel-caption d-none d-md-block">
+             <h5>Aout</h5>
+           </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselMois" role="button" data-slide="prev">
