--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -2,12 +2,29 @@
 
 {% block title %}Edit User{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>Edit User</h1>
+<div class="box_pages">
+  <h6>VEGGIZ</h6>
+    <h3>Edit User</h3>
+  <div class="container col-sm-10 col-md-8 col-lg-6">
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+  {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
+  <div class="boutons_discussion pb_margin">
     {{ include('user/_delete_form.html.twig') }}
+  </div>
+  <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position"><a href="{{ path('user_index') }}">Retour</a></button>
+
+  </div>
+
+</div>
+
 {% endblock %}
