--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -2,10 +2,22 @@
 
 {% block title %}New User{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>Create new User</h1>
+<div class="box_pages">
+  <h6>VEGGIZ</h6>
+    <h3>Create new User</h3>
 
     {{ include('user/_form.html.twig') }}
 
     <a href="{{ path('user_index') }}">back to list</a>
+</div>
+
 {% endblock %}
