--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -89,7 +89,7 @@
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
             <img src="img/artichoke.png" label="icone-banane" class="fruits">
-            <h4>Artichau</h4>
+            <h4>Artichaut</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
             <img src="img/fig.png" label="icone-banane" class="fruits">
@@ -97,7 +97,7 @@
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
             <img src="img/melon.png" label="icone-banane" class="fruits">
-            <h4>melon</h4>
+            <h4>Melon</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
             <img src="img/paprika.png" label="icone-banane" class="fruits">
@@ -116,11 +116,11 @@
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
           <img src="img/tomato.png" label="icone-banane" class="fruits">
-          <h4>tomate</h4>
+          <h4>Tomate</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
             <img src="img/lemon.png" label="icone-banane" class="fruits">
-            <h4>citron</h4>
+            <h4>Citron</h4>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
             <img src="img/asparagus.png" label="icone-banane" class="fruits">
@@ -132,7 +132,7 @@
           </div>
           <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
             <img src="img/carrot.png" label="icone-banane" class="fruits">
-            <h4>Carrot</h4>
+            <h4>Carrotte</h4>
           </div>
 
         <div class"w-100"> </div>
@@ -155,11 +155,11 @@
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
           <img src="img/broccoli.png" label="icone-banane"class="fruits">
-          <h4>broccoli</h4>
+          <h4>Broccoli</h4>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
           <img src="img/raspberries.png" label="icone-banane"class="fruits">
-          <h4>Franboise</h4>
+          <h4>Framboise</h4>
         </div>
         </div>
 
@@ -277,8 +277,8 @@
       <h2 class="text-right" id="lienPageForum">FORUM </h2>
       <div class="row container box_theme">
         <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
-          <img src="{{ asset('img/icone-coeur.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_coeur_conso'}) }}">
+          <img src="{{ asset('img/icone-coeur.png')}}" alt="icone theme" id="icone_theme">
           <div class="texte">
           <h4>COUP D'COEUR CONSO</h4>
           <p> Paratgez vos coups de coeur cuisine, legumes ou producteurs.</p>
@@ -286,8 +286,8 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
-          <img src="{{ asset('img/icone-gueule.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_gueule_conso'}) }}">
+          <img src="{{ asset('img/icone-gueule.png')}}" alt="icone theme" id="icone_theme">
           <div class="texte">
           <h4>COUP D'GUEULE CONSO</h4>
           <p> Vous avez reperé des
@@ -296,8 +296,8 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
-          <img src="{{ asset('img/icone-bonplan.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'bons_plans'}) }}">
+          <img src="{{ asset('img/icone-bonplan.png')}}" alt="icone theme" id="icone_theme">
             <div class="texte">
             <h4>BONS PLANS</h4>
             <p> Partagez ici les bons plans que vous avez repéré</p>
@@ -305,8 +305,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
-            <img src="{{ asset('img/icone-avis.png')}}" alt="icone theme" id="icone_theme">
             <a href="{{ path('theme_visu', {'slug': 'avis_sur_produits'}) }}">
+            <img src="{{ asset('img/icone-avis.png')}}" alt="icone theme" id="icone_theme">
             <div class="texte">
             <h4>AVIS PRODUITS & MARQUES</h4>
             <p> Aidez nous a
@@ -315,8 +315,8 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
-            <img src="{{ asset('img/icone-conseil.png')}}" alt="icone theme" id="icone_theme">
             <a href="{{ path('theme_visu', {'slug': 'conseil'}) }}">
+            <img src="{{ asset('img/icone-conseil.png')}}" alt="icone theme" id="icone_theme">
             <div class="texte">
             <h4>CONSEILS & ASTUCES</h4>
             <p> Partagez ici les conseils cuisine achat ou consommation</p>
