--- a/templates/home/message_create.html.twig
+++ b/templates/home/message_create.html.twig
@@ -12,10 +12,7 @@
 <div class="box_pages">
 
 <div class="box_pages">
-  <div class="container boutons_discussion">
-    <a class="btn btn-primary btn-sm bouton_retour" href="{{ path('message_visu',{'id': discussion_id })}}">Retour</a>
-  </div>
-  <br>
+
 
   {{ form_start(form_create) }}
 
@@ -25,7 +22,13 @@
 
     {{ form_label(form_create.content, null, {'label_attr': {'class': 'sr-only'}} ) }}
     {{ form_widget(form_create.content, {'attr': {'class': 'form-control', 'placeholder': 'Rédigez votre message'}}) }}
-      <input type="submit" class="btn btn-md btn-primary bouton_CreerDiscussion" name="submit" value="Enregistrer">
+
+      <div class="container boutons_discussion final">
+        <a class="btn btn-primary btn-md bouton_retour" href="{{ path('message_visu',{'id': discussion_id })}}">Retour</a>
+
+        <input type="submit" class="btn btn-md btn-primary bouton_NouveauContenu" name="submit" value="Enregistrer">
+      </div>
+
   </div>
 
 {{ form_end(form_create) }}
