--- a/templates/home/discussion_create.html.twig
+++ b/templates/home/discussion_create.html.twig
@@ -12,10 +12,6 @@
 
 
 <div class="box_pages">
-  <div class="container boutons_discussion">
-    <a class="btn btn-primary btn-sm col-sm- col-md- col-lg- bouton_retour" href="{{ path('theme_visu',{'slug': slug })}}">Retour</a>
-  </div>
-  <br>
 
   {{ form_start(form_create) }}
 
@@ -23,9 +19,12 @@
     <h3>Création d'une nouvelle discussion</h3>
     {{ form_label(form_create.title, null, {'label_attr': {'class': 'sr-only'}}) }}
     {{ form_widget(form_create.title, {'attr': {'class': 'form-control', 'placeholder': 'Titre de la nouvelle discussion'}}) }}
-    <div class="box_bouton_creer_discussion">
-      <input type="submit" class="btn btn-md btn-primary bouton_CreerDiscussion" name="submit" value="Enregistrer">
-    </div>
+
+    <div class="container boutons_discussion final">
+      <a class="btn btn-primary btn-md col-sm- col-md- col-lg- bouton_retour" href="{{ path('theme_visu',{'slug': slug })}}">Retour</a>
+
+      <input type="submit" class="btn btn-md btn-primary bouton_NouveauContenu" name="submit" value="Enregistrer">
+  </div>
   </div>
   {{ form_end(form_create) }}
 </div>
