--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -323,6 +323,8 @@
             </div></a>
         </div>
 
+        <a class="col-lg-4 col-md-6 col-sm-12 imgEtTxt" href="{{ path('eric') }}"></a>
+
       </div>
 
 
