--- a/templates/discussion/_delete_form.html.twig
+++ b/templates/discussion/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('discussion_delete', {'id': discussion.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="position" method="post" action="{{ path('discussion_delete', {'id': discussion.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ discussion.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-secondary btn-md bouton_NouveauContenu bas">Delete</button>
 </form>
