--- a/templates/discussion/edit.html.twig
+++ b/templates/discussion/edit.html.twig
@@ -2,15 +2,31 @@
 
 {% block title %}Edit Discussion{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>Edit Discussion</h1>
+<div class="box_pages">
+<h6>VEGGIZ</h6>
+<h3>Edit Discussion</h3>
+  <div class="container col-sm-10 col-md-8 col-lg-6">
+  {{ include('discussion/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('discussion/_form.html.twig', {'button_label': 'Update'}) }}
+<div class="boutons_discussion pb_margin">
+  {% if is_granted('ROLE_ADMIN') %}
+  {{ include('discussion/_delete_form.html.twig') }}
+  {% endif %}
+</div>
+  <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position"><a href="{{ path('discussion_index') }}">back to list</a></button>
 
-    <a href="{{ path('discussion_index') }}">back to list</a>
 
-    {% if is_granted('ROLE_ADMIN') %}
-    {{ include('discussion/_delete_form.html.twig') }}
-    {% endif %}
+  </div>
+</div>
+
 
 {% endblock %}
