--- a/templates/discussion/show.html.twig
+++ b/templates/discussion/show.html.twig
@@ -2,32 +2,48 @@
 
 {% block title %}Discussion{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>Discussion</h1>
+<div class="box_pages">
+<h6>VEGGIZ</h6>
+<h3>Discussion</h3>
+  <div class="container col-sm-10 col-md-8 col-lg-6">
+  <table class="table">
+      <tbody>
+          <tr>
+              <th>Id</th>
+              <td>{{ discussion.id }}</td>
+          </tr>
+          <tr>
+              <th>Title</th>
+              <td>{{ discussion.title }}</td>
+          </tr>
+          <tr>
+              <th>LastMsg</th>
+              <td>{{ discussion.lastMsg ? discussion.lastMsg|date('Y-m-d H:i:s') : '' }}</td>
+          </tr>
+      </tbody>
+  </table>
+<div class="container boutons_discussion">
+  <a class="btn btn-primary bouton_retour" href="{{ path('discussion_index') }}">Back to list</a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ discussion.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ discussion.title }}</td>
-            </tr>
-            <tr>
-                <th>LastMsg</th>
-                <td>{{ discussion.lastMsg ? discussion.lastMsg|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+  <a class="btn btn-primary bouton_retour" href="{{ path('discussion_edit', {'id': discussion.id}) }}">edit</a>
 
-    <a href="{{ path('discussion_index') }}">back to list</a>
+  {% if is_granted('ROLE_ADMIN') %}
+  {{ include('discussion/_delete_form.html.twig') }}
+  {% endif %}
+</div>
 
-    <a href="{{ path('discussion_edit', {'id': discussion.id}) }}">edit</a>
+  </div>
+</div>
 
-    {% if is_granted('ROLE_ADMIN') %}
-    {{ include('discussion/_delete_form.html.twig') }}
-    {% endif %}
+
 
 {% endblock %}
