--- a/templates/theme/index.html.twig
+++ b/templates/theme/index.html.twig
@@ -14,7 +14,7 @@
 <div class="box_pages">
 <h6>VEGGIZ</h6>
   <h3>Theme index</h3>
-<div class="container">
+<div class="container col-sm-10 col-md-8 col-lg-6">
 <table class="table">
     <thead class="entete">
         <tr>
@@ -42,8 +42,10 @@
     {% endfor %}
     </tbody>
 </table>
+<div class="container boutons_discussion">
+  <a class="btn btn-primary bouton_admin" href="{{ path('theme_new') }}">Create new</a>
+</div>
 
-<a href="{{ path('theme_new') }}">Create new</a>
 </div>
 
 </div>
