--- a/templates/theme/show.html.twig
+++ b/templates/theme/show.html.twig
@@ -2,29 +2,46 @@
 
 {% block title %}Theme{% endblock %}
 
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>Theme</h1>
+<div class="box_pages">
+  <h6>VEGGIZ</h6>
+    <h3>Thèmes</h3>
+  <div class="container col-sm-10 col-md-8 col-lg-6">
+  <table class="table">
+      <tbody>
+          <tr>
+              <th>Id</th>
+              <td>{{ theme.id }}</td>
+          </tr>
+          <tr>
+              <th>Name</th>
+              <td>{{ theme.name }}</td>
+          </tr>
+          <tr>
+              <th>Description</th>
+              <td>{{ theme.description }}</td>
+          </tr>
+      </tbody>
+  </table>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ theme.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ theme.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ theme.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+  <div class="container boutons_discussion">
+  <a class="btn btn-primary bouton_retour" href="{{ path('theme_index') }}">Back to list</a>
 
-    <a href="{{ path('theme_index') }}">back to list</a>
+  <a class="btn btn-primary bouton_retour" href="{{ path('theme_edit', {'id': theme.id}) }}">edit</a>
 
-    <a href="{{ path('theme_edit', {'id': theme.id}) }}">edit</a>
+  {{ include('theme/_delete_form.html.twig') }}
+  </div>
 
-    {{ include('theme/_delete_form.html.twig') }}
+  </div>
+
+</div>
+
 {% endblock %}
