--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -14,7 +14,7 @@
 <div class="box_pages">
   <h6>VEGGIZ</h6>
     <h3>User index</h1>
-<div class="container">
+<div class="container col-sm-10 col-md-8 col-lg-6">
   <table class="table">
       <thead class="entete">
           <tr>
