--- a/templates/message/_form.html.twig
+++ b/templates/message/_form.html.twig
@@ -1,4 +1,13 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') | trans }}</button>
+
+{{ form_label(form.title, null, {'label_attr': {'class': 'sr-only'}}) }}
+{{ form_widget(form.title, {'attr': {'class': 'form-control', 'placeholder': 'Titre'}}) }}
+
+{{ form_label(form.content, null, {'label_attr': {'class': 'sr-only'}}) }}
+{{ form_widget(form.content, {'attr': {'class': 'form-control', 'placeholder': 'Message'}}) }}
+
+{{ form_label(form.discussion, null, {'label_attr': {'class': 'sr-only'}}) }}
+{{ form_widget(form.discussion, {'attr': {'class': 'form-control', 'placeholder': 'Theme'}}) }}
+
+    <button class="btn btn-md btn-primary bouton_CreerDiscussion">{{ button_label|default('Save') | trans }}</button>
 {{ form_end(form) }}
