--- a/templates/message/show.html.twig
+++ b/templates/message/show.html.twig
@@ -15,7 +15,7 @@
   <h6>VEGGIZ</h6>
     <h3>Message</h3>
 
-<div class="container"
+<div class="container">
     <table class="table">
         <tbody>
             <tr>
