--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -15,7 +15,7 @@
     <h6>VEGGIZ</h6>
     <h3>Message index</h3>
 
-    <div class="container">
+    <div class="container col-sm-10 col-md-8 col-lg-6">
 
         <table class="table">
             <thead class="entete">
@@ -51,6 +51,6 @@
     <div class="container boutons_discussion">
     <a class="btn btn-primary bouton_admin" href="{{ path('message_new') }}">Create new</a>
     </div>
-    
+
     </div>
 {% endblock %}
