--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -15,7 +15,7 @@
     <h6>VEGGIZ</h6>
     <h3>Commentaire index</h3>
 
-<div class="container">
+<div class="container col-sm-10 col-md-8 col-lg-6">
 
     <table class="table">
         <thead class="entete">
