--- a/templates/commentaire/show.html.twig
+++ b/templates/commentaire/show.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
 
 <div class="box_pages">
-  <div class="modal-body container col-sm-10 col-md-8 col-lg-6">
+  <div class="container col-sm-10 col-md-8 col-lg-6">
     <h6>VEGGIZ</h6>
     <h3>Commentaire</h3>
 
