--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -1,11 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-{{form_start(account_form)}}
-{{form_widget(account_form)}}
-  <input type="submit" name="submit" value="Enregistrer">
-{{form_end(account_form)}}
+{% block stylesheets %}
+{{parent()}}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}"  />
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+{% endblock %}
 
-<a href="#" onclick="history.back();">Retour</a> {# boutton retour #}
+{% block body %}
+<div class="box_pages">
+  <div class="container col-sm-10 col-md-6 col-lg-4">
+  {{form_start(account_form)}}
+  {{form_widget(account_form)}}
+    <input type="submit" name="submit" value="Enregistrer">
+  {{form_end(account_form)}}
+
+  <a href="#" onclick="history.back();">Retour</a> {# boutton retour #}
+  </div>
+
+</div>
+
 
 {% endblock %}
