--- a/templates/home/message_create.html.twig
+++ b/templates/home/message_create.html.twig
@@ -9,7 +9,6 @@
 {% endblock %}
 
 {% block body %}
-<div class="box_pages">
 
 <div class="box_pages">
 
@@ -17,7 +16,7 @@
   {{ form_start(form_create) }}
 
   <div class="modal-body container col-sm-10 col-md-8 col-lg-6">
-    <h6></h6>
+    <h6>VEGGIZ</h6>
     <h3>Rédiger un nouveau message</h3>
 
     {{ form_label(form_create.content, null, {'label_attr': {'class': 'sr-only'}} ) }}
