--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
           <li class="nav-item">
             <a class="nav-link" href="{{ path('logout_route') }}">Se déconnecter</a>
-            <a class="nav-link" href="{{ path('account') }}">{{ 'Mon Compte' | upper }} </a> <!-- ajout de la rubrique Mon Compte quand on se connecte -->
+            {# <a class="nav-link" href="{{ path('account') }}">{{ 'Mon Compte' | upper }} </a> <!-- ajout de la rubrique Mon Compte quand on se connecte --> #}
           </li>
           {% else %}
             <li class="nav-item" data-toggle="modal" data-target="#loginForm">
