--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -282,7 +282,7 @@
           <img src="{{ asset('img/icone-coeur.png')}}" alt="icone theme" id="icone_theme">
           <div class="texte">
           <h4>COUP D'COEUR CONSO</h4>
-          <p> Paratgez vos coups de coeur cuisine, legumes ou producteurs.</p>
+          <p> Partagez vos coups de coeur cuisine, légumes ou producteurs.</p>
           </div></a>
         </div>
 
@@ -292,7 +292,7 @@
           <div class="texte">
           <h4>COUP D'GUEULE CONSO</h4>
           <p> Vous avez reperé des
-          arnaques ou des prosuits de mauvaise qualité. Faites en part.</p>
+          arnaques ou des prosuits de mauvaise qualité. Faites-en part.</p>
           </div></a>
         </div>
 
@@ -301,7 +301,7 @@
           <img src="{{ asset('img/icone-bonplan.png')}}" alt="icone theme" id="icone_theme">
             <div class="texte">
             <h4>BONS PLANS</h4>
-            <p> Partagez ici les bons plans que vous avez repéré</p>
+            <p> Partagez ici les bons plans que vous avez repérés.</p>
             </div>
           </a>
         </div>
@@ -311,7 +311,7 @@
             <div class="texte">
             <h4>AVIS PRODUITS & MARQUES</h4>
             <p> Aidez nous a
-            consommer responsable.N’hesitez pas à partager circuit courts et trouvailles</p>
+            consommer responsable. N’hesitez pas à partager circuits courts et trouvailles.</p>
             </div></a>
         </div>
 
