--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -213,19 +213,19 @@
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Fifth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-janvier.gif')}}" alt="Fifth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Janvier</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Sixth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-fevrier.gif')}}" alt="Sixth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Fevrier</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Seventh slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-mars.gif')}}" alt="Seventh slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Mars</h5>
            </div>
@@ -261,11 +261,12 @@
            </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselMois" role="button" data-slide="prev">
+
+        <a class="carousel-control-prev outside1" href="#carouselMois" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselMois" role="button" data-slide="next">
+        <a class="carousel-control-next outside" href="#carouselMois" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
