--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -189,25 +189,25 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="First slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-septembre.gif')}}" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Septembre</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Second slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-octobre.gif')}}" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Octobre</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Third slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-novembre.gif')}}" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Novembre</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Fourth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-novembre.gif')}}" alt="Fourth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Decembre</h5>
            </div>
@@ -231,31 +231,31 @@
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Eighth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-avril.gif')}}" alt="Eighth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Avril</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Nineth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-mai.gif')}}" alt="Nineth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Mai</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" ssrc="{{ asset('img/slide-juin.gif')}}" alt="tenth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="tenth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Juin</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Eleventh slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-juillet.gif')}}" alt="Eleventh slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Juillet</h5>
            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="Twelfth slide">
+            <img class="d-block w-100" src="{{ asset('img/slide-aout.gif')}}" alt="Twelfth slide">
             <div class="carousel-caption d-none d-md-block">
              <h5>Aout</h5>
            </div>
