--- a/templates/static/eric.html.twig
+++ b/templates/static/eric.html.twig
@@ -20,7 +20,7 @@
 <br>
 <p>Merci pour ta patience (parce qu'avec nous deux il y en avait bien besoin), ta bonne humeur, ta gentillesse, ta disponibilité et merci pour tous les debug !!</p>
 <br>
-<img src="surprise.jpg" alt="surprise">
+<img src="{{ asset('img/surprise.jpg')}}" alt="surprise">
 </div>
 
 
