--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,22 +29,24 @@
             <a class="nav-link" href="{{ path('home')}}#lienPageForum">FORUM</a>
           </li>
         </ul>
-        {#% if app.request.pathInfo == '/home' %#}
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item" data-toggle="modal" data-target="#subscribeForm">
-            <a class="nav-link" href="#">Inscription</a>
-          </li>
+      {% if is_granted('ROLE_ADMIN') %}
+      <li><a class="nav-link" href="{{ path('admin')}}">Admin</a></li>
+      {% endif %}
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
           <li class="nav-item">
             <a class="nav-link" href="{{ path('logout_route') }}">Se déconnecter</a>
             {# <a class="nav-link" href="{{ path('account') }}">{{ 'Mon Compte' | upper }} </a> <!-- ajout de la rubrique Mon Compte quand on se connecte --> #}
           </li>
           {% else %}
-            <li class="nav-item" data-toggle="modal" data-target="#loginForm">
-              <a class="nav-link" href="#">Connexion</a>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('register') }}">Inscription</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
             </li>
         {% endif %}
-        {#% endif %#}
+
 
         </ul>
       </div>
