--- a/templates/discussion/show.html.twig
+++ b/templates/discussion/show.html.twig
@@ -32,7 +32,7 @@
       </tbody>
   </table>
 <div class="container boutons_discussion">
-  <a class="btn btn-primary bouton_retour" href="{{ path('discussion_index') }}">Back to list</a>
+  <a class="btn btn-primary bouton_retour" href="{{ path('discussion_index') }}">Retour</a>
 
   <a class="btn btn-primary bouton_retour" href="{{ path('discussion_edit', {'id': discussion.id}) }}">edit</a>
 
