--- a/templates/message/show.html.twig
+++ b/templates/message/show.html.twig
@@ -38,7 +38,7 @@
     </table>
 
 <div class="container boutons_discussion">
-    <a class="btn btn-primary bouton_retour" href="{{ path('message_index') }}">back to list</a>
+    <a class="btn btn-primary bouton_retour" href="{{ path('message_index') }}">Retour</a>
 
     <a class="btn btn-primary bouton_retour"href="{{ path('message_edit', {'id': message.id}) }}">edit</a>
 
