--- a/templates/theme/show.html.twig
+++ b/templates/theme/show.html.twig
@@ -33,7 +33,7 @@
   </table>
 
   <div class="container boutons_discussion">
-  <a class="btn btn-primary bouton_retour" href="{{ path('theme_index') }}">Back to list</a>
+  <a class="btn btn-primary bouton_retour" href="{{ path('theme_index') }}">Retour</a>
 
   <a class="btn btn-primary bouton_retour" href="{{ path('theme_edit', {'id': theme.id}) }}">edit</a>
 
