--- a/templates/commentaire/edit.html.twig
+++ b/templates/commentaire/edit.html.twig
@@ -23,7 +23,7 @@
     {{ include('commentaire/_delete_form.html.twig') }}
     </div>
 
-    <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position"><a href="{{ path('commentaire_index') }}">back to list</a></button>
+    <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position"><a href="{{ path('commentaire_index') }}">Retour</a></button>
 
 
     </div>
