--- a/templates/commentaire/show.html.twig
+++ b/templates/commentaire/show.html.twig
@@ -35,7 +35,7 @@
     </table>
 
     <div class="container boutons_discussion">
-        <a class="btn btn-primary bouton_retour" href="{{ path('commentaire_index') }}">back to list</a>
+        <a class="btn btn-primary bouton_retour" href="{{ path('commentaire_index') }}">Retour</a>
 
         <a class="btn btn-primary bouton_retour" href="{{ path('commentaire_edit', {'id': commentaire.id}) }}">edit</a>
 
