--- a/templates/discussion/edit.html.twig
+++ b/templates/discussion/edit.html.twig
@@ -22,7 +22,7 @@
   {{ include('discussion/_delete_form.html.twig') }}
   {% endif %}
 </div>
-  <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position"><a href="{{ path('discussion_index') }}">back to list</a></button>
+  <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position"><a href="{{ path('discussion_index') }}">Retour</a></button>
 
 
   </div>
