--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -40,7 +40,7 @@
     </tbody>
 </table>
 <div class="container boutons_discussion">
-  <a class="btn btn-primary bouton_retour" href="{{ path('user_index') }}">Back to list</a>
+  <a class="btn btn-primary bouton_retour" href="{{ path('user_index') }}">Retour</a>
 
   <a class="btn btn-primary bouton_retour" href="{{ path('user_edit', {'id': user.id}) }}">Edit</a>
 
